# Stock-market-alert-app

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ALERT_TESTING_GUIDE.md  BACKEND_FMP_REBUILD_SUMMARY.md  BACKEND_REBUILD_SUMMARY.md  Claude.md  DISCORD_ROUTING_EXPLAINED.md  DISCORD_ROUTING_GUIDE.md  Dockerfile  Dockerfile.systemd  ETFS.xlsx  GLOBAL UNIVERSE.xlsx  GRPC_MICROSERVICE_EXAMPLE.md  Home.cpython-311.py  Home.py  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_ALERT_SYSTEM_GUIDE.md  QUICK_START_TESTING.md  README.md  REFACTOR_PLAN.md  SCHEDULER_CACHING_ENHANCEMENT.md  TESTING_FUTURES_SCHEDULER.md  TESTING_TOOLKIT_GUIDE.md  WEEK4_SUMMARY.md  WEEK_3_SUMMARY.md  _BACKEND_FMP_REBUILD_COMPLETE.txt  _test_backend_fmp.py  _test_backend_fmp_integration.py  _test_backend_import.py  _test_hourly.py  alert_audit_logger.py  alert_processing_config.json  analyze_alerts.py  async_discord_logger.py  auto_scheduler_v2.py  (+79 more)
.github/workflows/: ci.yml  deploy.yml
alert/: alert.go  checker.go  evaluator.go  evaluator_test.go  go.mod  go.sum
apps/scheduler/: CLAUDE.md  Dockerfile  README.md  go.mod  go.sum
calendar/: FMP_MARKET_HOURS_PLAN.md  calendar.go  calendar_test.go  exchanges.go  fmp_market_hours.go  go.mod
data_access/: alert_repository.py  document_store.py  metadata_repository.py  portfolio_repository.py
database/: go.mod  sqlc.yaml
db/: postgres_schema.sql  postgres_schema.sql.bak
deploy/: README-docker-systemd.md  README.md  auto-scheduler.service  deploy-docker.ps1  deploy-docker.sh  futures-scheduler.service  health-check.sh  hourly-data-scheduler.service  post-deploy.sh  scheduler-watchdog.service  setup-server.sh  start_auto_scheduler.sh  start_futures_scheduler.sh  start_hourly_data_scheduler.sh  start_scheduler_watchdog.sh
deploy/systemd/: stockalert-app.service  stockalert-futures.service  stockalert-hourly.service  stockalert-scheduler.service  stockalert-watchdog.service
deploy/systemd-docker/: entrypoint.sh  stockalert-app.service  stockalert-futures.service  stockalert-hourly.service  stockalert-scheduler.service  stockalert-watchdog.service
discord/: accumulator.go  custom.go  custom_test.go  discord.go  formatter.go  go.mod  notifier.go  portfolios.go  portfolios_test.go  routing.go  status.go
docs/: ADD_ALERT_PAGE_PLAN.md  ALERT_AUDIT_LOGS_NEXTJS_PLAN.md  ALERT_HISTORY_NEXTJS_PLAN.md  CONDITIONS_FLOW.md  CUSTOM_INDICATORS_FROM_TRADINGVIEW.md  HOURLY_DISCORD_MANAGEMENT_NEXTJS_PLAN.md  MA_SLOPE_CURVATURE_INDICATOR_PLAN.md  MIGRATION_PLAN_NEXTJS_GRPC.md  MIGRATION_STOCK_DATABASE_TO_NEXTJS.md  PRICE_DATABASE_NEXTJS_GO_PLAN.md  SCHEDULER_STOP_RESET_PLAN.md  SCOPE_SAVE_LOAD_SCANNER_ALERTS.md  STOCK_ALERT_WORKFLOW.md  TALIB_INDICATORS_ROADMAP.md  TRADINGVIEW_PARITY.md  WEEK_1_SUMMARY.md  WEEK_2_FINAL_SUMMARY.md  WEEK_2_PROGRESS.md  add_alert_indicator_catalog.md  alert_discord_debug.md  exchange_hours.txt  postgres_migration.md
expr/: CLAUDE.md  ast.go  catalog.go  evaluator.go  expr_test.go  go.mod  nested_indicator_test.go  parser.go  tokenizer.go
indicator/: advanced.go  basic.go  bbands.go  custom.go  donchian.go  go.mod  ichimoku.go  indicator_test.go  kalman.go  ma_slope_curve.go  macd.go  obv_macd.go  pivot.go  registry.go  sar.go  supertrend.go  talib_ext.go  trend_magic.go  types.go  zscore_macd_test.go
migration/: import_sqlite_to_postgres.py  load_json_to_postgres.py
pages/: Add_Alert.py  Alert_Audit_Logs.py  Alert_History.py  Daily_Discord_Management.py  Daily_Move_Tracker.py  Daily_Weekly_Scheduler_Status.py  Delete_Alert.py  Discord_Management.py  Edit_Alert.py  Futures_Alerts_Home.py  Futures_Database.py  Futures_Price_Database.py  Hourly_Discord_Management.py  Hourly_Scheduler_Status.py  Market_Hours.py  My_Portfolio.py  Price_Database.py  Scanner.py  Stock_Database.py  Weekly_Discord_Management.py
tests/: Claude.md  __init__.py  conftest.py
web/: package.json  pnpm-lock.yaml
(+479 files in other folders)
