[project]
name = "stock-market-alert-app"
version = "2.0.0"
description = "Stock market alert and scanning application with automated notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-insync>=0.9.86",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "streamlit>=1.53.1",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "exchange-calendars>=4.5.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "freezegun>=1.2.0",
    "faker>=19.0.0",
    # Code Quality
    "ruff>=0.6.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    # Type stubs
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__.py
"tests/*" = ["S101"]      # Assert statements OK in tests

[tool.ruff.lint.isort]
known-first-party = ["stock_alert"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, will increase strictness gradually
ignore_missing_imports = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/stock_alert",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
