[project]
name = "stock-market-alert-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "exchange-calendars>=4.12",
    "factory-boy>=3.3.3",
    "fmpsdk>=20250102.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.151.4",
    "ib-insync>=0.9.86",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.2",
    "psutil>=7.2.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "redis>=7.1.0",
    "responses>=0.25.8",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "streamlit-tags>=1.2.8",
    "ta-lib>=0.6.8",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests (real FMP, DB, Discord, audit logging); run with -m e2e",
]
